--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/dev-rodion/gulp4#readme",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "embla-carousel": "^6.0.2",
@@ -28,7 +29,6 @@
     "gulp-uglify-es": "^3.0.0",
     "gulp-w3c-html-validator": "^5.1.0",
     "jquery": "^3.6.0",
-    "magnific-popup": "^1.1.0",
     "mixitup": "^3.3.1",
     "sass": "^1.43.5",
     "slick-carousel": "^1.8.1"
